cloud/w10/lab/gatekeeper/constraints/max-replicas-template.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sMaxReplicas
metadata:
  name: deployment-max-5-replicas
spec:
  enforcementAction: deny # Từ chối thẳng tay nếu vi phạm
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
  parameters:
    max: 5 # Cấu hình số replicas tối đa là 5 theo đề bài
