cloud/w10/lab/gatekeeper/constraints/network.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNetworkingPorts
metadata:
  name: psp-host-network
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-system
      - eso
      - argocd
      - monitoring
      - gatekeeper-system
      - argo-rollouts
      - cert-manager
  parameters:
    hostNetwork: false
